ALPHA-583 collection update events
